--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,5 @@
-
+spring.datasource.url= jdbc:sqlserver://localhost;databaseName=DatingApp
+spring.datasource.username=xxxtrglyn
+spring.datasource.password=luyndeptrai1
+spring.jpa.properties.hibernate.dialect= org.hibernate.dialect.SQLServer2012Dialect
+spring.jpa.hibernate.ddl-auto= update
