--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,11 @@
-spring.datasource.url= jdbc:sqlserver://localhost;databaseName=DatingApp
+server.port=8080
+###View resolve
+spring.mvc.view.prefix=/WEB-INF/jsp/
+spring.mvc.view.suffix=.jsp
+
+####SQL Server
+spring.datasource.url=jdbc:sqlserver://localhost:1433;databaseName=DatingApp
+spring.datasource.driver-class-name=com.microsoft.sqlserver.jdbc.SQLServerDriver
 spring.datasource.username=xxxtrglyn
-spring.datasource.password=luyndeptrai1
-spring.jpa.properties.hibernate.dialect= org.hibernate.dialect.SQLServer2012Dialect
-spring.jpa.hibernate.ddl-auto= update
+spring.datasource.password=12345
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.SQLServer2012Dialect
