--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,7 +4,7 @@ spring.mvc.view.prefix=/WEB-INF/jsp/
 spring.mvc.view.suffix=.jsp
 
 ####SQL Server
-spring.datasource.url=jdbc:sqlserver://localhost:1433;databaseName=DatingApp
+spring.datasource.url=jdbc:sqlserver://localhost:1433;databaseName=UserMana;encrypt=true;trustServerCertificate=true
 spring.datasource.driver-class-name=com.microsoft.sqlserver.jdbc.SQLServerDriver
 spring.datasource.username=xxxtrglyn
 spring.datasource.password=12345
