--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,11 @@
+server.port=8080
+###View resolve
+spring.mvc.view.prefix=/WEB-INF/jsp/
+spring.mvc.view.suffix=.jsp
 
+####SQL Server
+spring.datasource.url=jdbc:sqlserver://localhost:1433;databaseName=BtSQL
+spring.datasource.driver-class-name=com.microsoft.sqlserver.jdbc.SQLServerDriver
+spring.datasource.username=sa
+spring.datasource.password=123456
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.SQLServer2012Dialect
